--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Let's Play!</title>
   </head>
 
   <body>
